added the framework of the homepage and started on a frutiger aero theme for my site!!

--- a/home.html
+++ b/home.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <title> Fiona's personal website!</title>
-        </head>
-        <body>
-            <title> Homepage! </title>
-            
-        </body>
-    </html>
+<html>
+    <head>
+        <title> Fiona's personal website!</title>
+        <link rel = "stylesheet" href = "main.css">
+    </head>
+    <body>
+        <h1> Homepage! </h1>
+        <div>
+            <p> yo </p>
+            <p> Welcome to my awesome frutiger aero website!</p>
+            <p> This is where I will put some random stuff and possibly an awesome blog!!</p>
+            <img src = "VPIE8432.JPG"/>
+        </div>
+    </body>
+</html>
