--- a/home.html
+++ b/home.html
@@ -10,7 +10,9 @@
             <p> yo </p>
             <p> Welcome to my awesome frutiger aero website!</p>
             <p> This is where I will put some random stuff and possibly an awesome blog!!</p>
-            <img src = "VPIE8432.JPG"/>
+            <!-- <img src = "VPIE8432.JPG"/> -->
+            <img src = "https://thumbs.dreamstime.com/b/winner-happy-woman-success-12804815.jpg">
+"
         </div>
     </body>
 </html>
